{{$NEXT}}

      ENHANCEMENTS:

      * Optimized some queries to make it faster to register packages on a stack.
      In the best cases, performance has improved by about 150%.  But in the
      average case, the limiting factor is fetching and unpacking the upstream
      distribution, so you'll only see a slight improvement there.

0.087     2013-06-19 14:47:01 America/Los_Angeles
       
      INCOMPATIBLE CHANGES:

      * When pulling, Pinto now takes the first satisfactory package that it
      finds among the upstream repositories, rather than taking the latest
      one.  This only matters if you specify multiple upstream repositories. To
      get the old behavior, use the new --cascade option on the "pull"  and
      "add" commands.  Thanks @hesco for helping me sort this out.

      * The "version" command has been removed.  Now that all Pinto components
      ship together, they all have the same version number.  So there is no
      need for a special version command.  If you want to know what version of
      pinto you have, just use the --version option.
      
      * Author IDs must now match /^[A-Z]{2}[-A-Z0-9]*$/.  In other words, two
      ASCII letters followed by zero or more ASCII letters, digits, or
      hyphens.  If you use lowercase letters, they will be automatically
      forced to uppercase for you.  This was done because cpanm relies on
      author IDs following the  PAUSE convention.  I had hoped that Pinto
      could be more liberal about author IDs, but it seems we must conform so
      that we can cooperate with the rest of the toolchain.

      * The --no-history and --allow-duplicates repository configuration
      parameters are no longer supported.  I had created those so you could
      try mirroring CPAN with a Pinto repository.  But I have decided that use
      case is out of scope for Pinto.  If you realy want a mirror of CPAN, use
      CPAN::Mini or rsync.

      ENHANCEMENTS:
